--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "node": "^20.19.4",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "zod": "^4.0.10"
   },
